# march-madness-2026

./: .gitignore  AGENTS.md  main.py  pyproject.toml
.github/workflows/: deploy-pages.yml
data/brackets/: andrea-togni.html  austin-jude.html  austin-music.html  bracket-homepage.html  carrie-bruce.html  chloe-hart.html  darren-boyd.html  david-mayo.html  emily-walter.html  ian-warford.html  jackson-scott.html  john-asher.html  mila-shearer.html  mitchell-mcculley.html  noah-patrick.html
data/brackets/andrea-togni_files/: ContinuousPlay-D237d7K-.css  a.html
data/brackets/austin-jude_files/: a.html  bcg.html
data/brackets/austin-music_files/: a.html  index-lZwp66yT.js  mml_2-ais.min.js  userconsent-iab.min.js
data/espn/: api.md  scoreboard.json  teams.json
data/predictions/: prediction-history.json
data/structs/: 2026-starting-bracket.json  2026-teams.json
data/user-brackets/: andrea-togni.json  austin-jude.json  austin-music.json  carrie-bruce.json  chloe-hart.json  darren-boyd.json  david-mayo.json  emily-walter.json  ian-warford.json  jackson-scott.json  john-asher.json  mila-shearer.json  mitchell-mcculley.json  noah-patrick.json
definitions/: bracket.json  teams.json
docs/: 404.html  index.html
docs/standings/: index.html
docs/static/: style.css
src/march_madness/: canonical_bracket.py  check_need.py  deploy.py  predictions.py  scoring.py  scrape.py  script.py  update_predictions.py  user_brackets.py
tests/: test_bracket_structure.py  test_check_need.py  test_frontend.py  test_predictions.py  test_update_predictions.py  test_user_brackets.py
(+172 files in other folders)
